Small icon and wrap fix

--- a/assets/css/sections/_product-section.scss
+++ b/assets/css/sections/_product-section.scss
@@ -131,4 +131,5 @@
     width: 20px;
     height: 17px;
     margin-right: 12px;
+    vertical-align: middle;
 }
